# apis-core

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.rst  api_core_dev.code-workspace  checkandbump.sh  configuration.html  genindex.html  installation.html  internal_api.html  manage.py  objects.inv  pyproject.toml  requirements.txt  requirements_include_all.txt  reus_spacy.txt  searchindex.js  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml
_modules/: index.html
_modules/entities/: views.html
_modules/helper_functions/: RDFparsers.html
_modules/relations/: models.html  views.html
_sources/: installation.rst.txt
_sources/modules/: entities.rst.txt  helper_functions.rst.txt  highlighter.rst.txt  vocabularies.rst.txt
apis/: urls.py  wsgi.py
apis/context_processors/: custom_context_processors.py
apis/settings/: base.py  base_dev.py  settings_test_ci.py
apis_core/: api_renderers.py  api_routers.py  entity_detail_generic.html  project.html  testrunners.py  urls.py
apis_core/apis_entities/: admin.py  api_renderers.py  api_urls.py  api_views.py  apps.py  autocomplete3.py  autocomplete_light_registry.py  cidoc_mapping.py  coladay_extra_api_endpoints.py  coladay_serializers.py  custom_authentication.py  detail_views.py  fields.py  filters.py  filters__sresch__suggestion.py  forms.py  merge_views.py  models.py  serializers.py  serializers_generic.py  tables.py  test_api.py  test_forms.py  test_models.py  test_parsers.py  urls.py  views.py  views2.py
apis_core/apis_labels/: admin.py  apps.py  autocomplete_light_registry.py  forms.py  models.py  serializers.py  urls.py  views.py
apis_core/apis_metainfo/: admin.py  api_renderers.py  api_views.py  apps.py  dal_urls.py  dal_views.py  filters.py  forms.py  models.py  serializers.py  tables.py  test_models.py  urls.py  validators.py  views.py
apis_core/apis_relations/: admin.py  api_views.py  apps.py  autocomplete_light_registry.py  forms.py  forms2.py  forms_backup.py  models.py  rel_filters.py  rel_forms.py  rel_views.py  serializers.py  tables.py  tests.py  urls.py  views.py
apis_core/apis_tei/: README.md  apps.py  partials.py  tei.py  tei_ac.py  tei_urls.py  tei_utils.py  views.py
apis_core/apis_vis/: api_views.py  apps.py  serializers.py  urls.py  utils.py  views.py
apis_core/apis_vocabularies/: admin.py  api_renderers.py  api_views.py  apps.py  models.py  serializers.py  urls.py  views.py
apis_core/context_processors/: custom_context_processors.py
apis_core/default_settings/: NER_settings.py  RDF_default_settings.yml  RDF_settings.py  RDF_settings_new.py  URI_replace_settings.yml
apis_core/entities/: api_urls.py  api_views.py  autocomplete3.py  detail_views.py  models.py  views.py  views2.py
apis_core/helper_functions/: ContentType.py  DateParser.py  EntityRelationFieldGenerator.py  RDFParser.py  RDFParserNew.py  RDFparsers.py  RDFparsers_bak.py  dl_models.py  highlighter.py  inter_annotator_agreement.py  pylobid.py  stanbolQueries.py  utils.py
apis_core/labels/: apps.py  forms.py  models.py  urls.py  views.py
apis_core/metainfo/: admin.py  api_renderers.py  apps.py  models.py  serializers.py
apis_core/openrefine/: apps.py  urls.py  utils.py  views.py
apis_core/relations/: api_views.py  apps.py  autocomplete_light_registry.py  forms.py  forms2.py  models.py  serializers.py  tables.py  urls.py  views.py
apis_core/templatetags/: apis_templatetag.html  apis_templatetags.py
apis_core/vocabularies/: admin.py  urls.py
browsing/: browsing_utils.py
browsing/migrations/: 0001_initial.py
django_spaghetti/: urls.py
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  internal_api.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_documentation.html
docs/.doctrees/: configuration.doctree  data_model.doctree  environment.pickle  index.doctree  installation.doctree  (+2 more)
entities/: admin.py  api_urls.py  api_views.py  autocomplete3.py  autocomplete_light_registry.py  custom_autocompletes.py  detail_views.py  filters.py  forms.py  models.py  serializers.py  tables.py  test_models.py  test_parsers.py  urls.py  views.py  views2.py
helper_functions/: RDFparsers.py  dl_models.py  highlighter.py  inter_annotator_agreement.py  stanbolQueries.py
highlighter/: admin.py  api_views.py  apps.py  autocomplete_light_registry.py  forms.py  models.py  serializer.py  urls.py  views.py
html/: .buildinfo
infos/: apps.py  filters.py  forms.py  models.py  special_views.py  tables.py  urls.py  views.py
labels/: admin.py  autocomplete_light_registry.py  forms.py  models.py  readme.txt  urls.py  views.py
metainfo/: models.py  serializers.py
modules/: helper_functions.html  highlighter.html  metainfo.html  relations.html
relations/: admin.py  api_views.py  autocomplete_light_registry.py  forms.py  forms2.py  forms_backup.py  models.py  tables.py  urls.py  views.py
templates/: _ajax_form_generic.html
vocabularies/: admin.py  apps.py  models.py  urls.py
(+401 files in other folders)
