[tool.poetry]
name = "apis-core"
version = "0.13"
description = "Base package for the APIS framework"
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
django = "==2.2.16"
djangorestframework = "^3.11.1"
django-filter = "^2.3.0"
django-autocomplete-light = "^3.5.1"
django-cors-headers = "^3.5.0"
django-crum = "^0.7.7"
django-crispy-forms = "^1.9.2"
django-haystack = "^3.0"
django-gm2m = "^1.0"
django-guardian = "^2.3.0"
django-leaflet = "^0.27.1"
django-model-utils = "^4.0.0"
django-reversion = "^3.0.8"
django-reversion-compare = "^0.12.2"
django-tables2 = "^2.3.1"
djangorestframework-csv = "^2.1.0"
djangorestframework-xml = "^2.0.0"
isodate = "^0.6.0"
jmespath = "^0.10.0"
jsonschema = "^3.2.0"
lxml = "^4.5.2"
MarkupSafe = "^1.0"
mysqlclient = "^2.0.1"
pandas = "^1.1.2"
pandocfilters = "^1.4.2"
pysolr = "^3.9.0"
python-dateutil = "^2.8.1"
pyyaml = "^5.3.1"
rdflib = "^5.0.0"
regex = "^2020.7.14"
requests = "^2.24.0"
sentry-sdk = "^0.17.8"
sparqlwrapper = "^1.8.5"
unicodecsv = "^0.14.1"
drf-spectacular = "^0.9.13"
tablib = "^2.0.0"
celery = "^5.0.0"
pymongo = "^3.11.0"
convertdate = "^2.2.2"
django-summernote = "^0.8.11"
djangorestframework-jsonschema = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-extensions = "^3.0.9"
networkx = "^2.5"
flake8 = "^3.8.3"
yapf = "^0.30.0"
jupyter = "^1.0.0"
openpyxl = "^3.0.5"
spacy = "^2.3.2"
pylint = "^2.6.0"
xlrd = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
