[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "apis-core"
version = "0.18"
description = "Base package for the APIS framework"
authors = ["Matthias Schlögl <matthias.schloegl@oeaw.ac.at>", "Peter Andorfer <peter.andorfer@oeaw.ac.at>", "Stefan Resch <stefan.resch@oeaw.ac.at>", "Richard Hadden <richard.hadden@oeaw.ac.at>", "Gregor Pirgie <gregor.pirgie@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_core"}, {include = "browsing"}, {include = "infos"}]
include = [{path = "LICENSE.txt", format = "sdist"}, {path = "README.rst", format = "sdist"}]
exclude = ["apis/", "manage.py", "__pycache__"]

[tool.poetry.dependencies]
python = ">=3.11.2, <3.12"
Django = "^4.1"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
django-autocomplete-light = "~3.9.4"
django-cors-headers = "^3.13.0"
django-crum = "^0.7.9"
django-crispy-forms = "^1.10.0" # Version 2 available, but needs checking
django-guardian = "^2.4.0"
django-leaflet = "^0.28.3"
django-reversion = "^5.0.4"
django-tables2 = "^2.5.2"
djangorestframework-csv = "^2.1.1"
djangorestframework-xml = "^2.0.0"
jsonschema = "^4.17.3"
lxml = "^4.9.2"
convertdate = "^2.4.0"
PyYAML = "^6.0"
rdflib = "^6.2.0"
drf-spectacular = "~0.25.1"
tablib = "^3.3.0"
regex = "^2022.10.31"
requests = "^2.28.2"
sentry-sdk = "^1.15.0"
SPARQLWrapper = "^2.0.0"
django-model-utils = "^4.3.1"
django-summernote = "^0.8.20.0"
djangorestframework-jsonschema = "^0.1.1"
pandas = "^1.5.3"
django-admin-csvexport = "^2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-extensions = "^3.0.9"
networkx = "^2.5"
flake8 = "^3.8.3"
yapf = "^0.30.0"
jupyter = "^1.0.0"
openpyxl = "^3.0.5"
spacy = "^2.3.2"
pylint = "^2.6.0"
xlrd = "^1.2.0"
lastversion = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
